tests/negative/gold/factory_return_type_test.gold
tests/negative/factory_return_type_test.toit:8:26: error: Factories may not have return types
  constructor.factory -> A:
                         ^
tests/negative/factory_return_type_test.toit:11:29: error: Factories may not have return types
  constructor.factory2 x -> B:
                            ^
Compilation failed.
